# Proyecto-Regresion-de-Costos-y-Prediccion-de-Diabetes

./: README.md  app.py  data_pipeline.py  probando_diabetes.py  probando_modelo.py  pyproject.toml  render.yaml  requirements.txt  train_diabetes.py  train_regression.py
models/: diabetes_feature_importances.csv  diabetes_models.joblib  diabetes_predicciones.csv  metrics_diabetes.json  metrics_insurance.json  ridge_coefficients.csv
predicciones/: diabetes_predicciones.csv  predicciones_seguro.csv
